# dead-inside-5th-term

./: initial commit  sample
bullsncows/: Makefile  bulls_and_cows  main.cpp
server/: Makefile  cmake_install.cmake
server/final/: CMakeLists.txt  Makefile  asio-1.18.1.tar.bz2  main.cpp
spectrogram/: Makefile  a.out  anotherfilegen.py  filegen.py  ladder.cpp  reversespec.py  reversespectrogram.cpp  spec  specnoparal.cpp  spectrogram  spectrogram.cpp
spectrogram/Final/: Makefile
webminfo/: a.out  webm1.cpp  webm_info.cpp  webm_info4.cpp  webminfo2.cpp  webminfo3.cpp  webminfo5.cpp  webminfo6  webminfo6.cpp  webminfo7.cpp
webminfo/Final/: a.out  webminfo.cpp
webminfo/ebml-parser/: a.out  main.cpp  output.webm  spec.cpp
